# models/request.go
@@ -3,11 +3,10 @@ package models
 type LoginRequest struct {
 	Username string `json:"username,omitempty"`
 	Password string `json:"password,omitempty"`
-	Role     string `json:"role,omitempty"`
 }
 
 type RegisterRequest struct {
-	UserName  string `json:"user_name,omitempty"`
+	Username  string `json:"user_name,omitempty"`
 	Password  string `json:"password,omitempty"`
 	Grade     string `json:"grade,omitempty"`
 	StudentID uint   `json:"student_id,omitempty"`
@@ -15,6 +14,8 @@ type RegisterRequest struct {
 
 type UpdateInfoRequest struct {
 	NewName     string `json:"new_name,omitempty"`
+	Email       string `json:"email,omitempty"`
+	Phone       string `json:"phone,omitempty"`
 	OldPassword string `json:"old_password,omitempty"`
 	NewPassword string `json:"new_password,omitempty"`
 }
